--- a/about.html
+++ b/about.html
@@ -149,14 +149,14 @@
         </div>
         <div id="textIntro" style="flex: 1">
           <h1>Understanding the 2023 Turkey Earthquake</h1>
-          <p>
+          <p style="font-size: 21px;">
             On February 6, 2023, Turkey was hit by a devastating earthquake that
             not only shook the nation but also captured global attention due to
             its severe impacts and tragic aftermath. This disaster
             claimed thousands of lives and caused extensive damage to
             infrastructure, homes, and historical sites across several regions.
           </p>
-          <p>
+          <p style="font-size: 21px;">
             The earthquake hit in the early hours, lasting 85 seconds, but its
             repercussions are still felt today. It was followed by over 570
             aftershocks, including a significant 7.5 magnitude temblor,
