--- a/education.html
+++ b/education.html
@@ -151,7 +151,7 @@
           <h1>
             Empowering Communities through Disaster Preparedness Education
           </h1>
-          <p>
+          <p style="font-size: 21px;">
             Understanding and preparing for disasters is important in safeguarding
             our communities. Building a culture of preparedness is not just about having supplies
             ready; it's about making informed decisions and taking proactive
