--- a/impact.html
+++ b/impact.html
@@ -149,14 +149,14 @@
         </div>
         <div id="textIntro" style="flex: 1">
           <h1>Immediate Aftermath of the 2023 Turkey Earthquake</h1>
-          <p>
+          <p style="font-size: 21px;">
             The 2023 earthquake in Turkey was a seismic event of unprecedented
             scale, impacting millions and exposing the critical need for urban
             planning and disaster readiness. The quake not only shattered lives
             but also infrastructure, leaving a lasting imprint on the region's
             landscape and its people's hearts.
           </p>
-          <p>
+          <p style="font-size: 21px;">
             The initial hours following the earthquake were marked by chaos and
             confusion as emergency services scrambled to respond amidst the
             widespread devastation. With many areas rendered inaccessible due to
