--- a/policies.html
+++ b/policies.html
@@ -149,7 +149,7 @@
         </div>
         <div id="textIntro" style="flex: 1">
           <h1>Engineering for Earthquake Resilience: A New Model</h1>
-          <p>
+          <p style="font-size: 21px;">
             As the dust settled following the massive earthquakes that shook
             Turkey and Syria, a tale of two building philosophies emerged. While
             traditional constructions crumbled, structures equipped with
@@ -157,7 +157,7 @@
             tremors, showcasing the critical impact of engineering innovation in
             disaster-prone zones.
           </p>
-          <p>
+          <p style="font-size: 21px;">
             These seismic technologies, including isolation systems and dampers,
             are designed to absorb seismic energy, significantly reducing the
             transfer of motion to the structures they protect. This not only
