--- a/unpage.html
+++ b/unpage.html
@@ -143,7 +143,7 @@
         </div>
         <div id="textIntro" style="flex: 1">
           <h1>Introduction: Building the Foundations of Resilient Cities</h1>
-          <p>
+          <p style="font-size: 21px;">
             As global urban populations continue to rise, the challenges
             associated with creating livable, sustainable, and resilient cities
             come into focus. United Nations Sustainable Development Goal 11 (SDG
